--- a/style.css
+++ b/style.css
@@ -111,6 +111,9 @@ label:hover{
 }
 
 
+.socialnetwork a{color: black; display: inline-block; margin: 1vw; border-radius: 13px;}
+.socialnetwork a:hover{background: #e5e4ef61; }
+.socialnetwork img{border-radius: 13px; width: 10vw;}
 @media screen and (max-width: 1220px) {
     
    aside, section{
